--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -117,12 +117,30 @@
           <label class="font-weight-light font-italic">This is a Google Drive Shareable Link</label> <br>
           <label class="font-weight-light font-italic">Make sure it is open to everyone</label>
         </div>
-        <button type="submit" class="btn btn-primary">Sign-up</button>
+        <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Sign-up</button>
       </form>
     </mat-card-content>
-  </mat-card>
+  </mat-card><br>
 </div>
 <br>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Successful</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          You have successful made an appointment at the Deep Run Writing Center.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- <div *ngIf="submitted">
   <h3> Your Data </h3>
   <p> Firstname: {{ data.firstName }} </p>
