--- a/DRHSWS_UI/src/app/resources/resources.component.html
+++ b/DRHSWS_UI/src/app/resources/resources.component.html
@@ -1,11 +1,11 @@
 <br>
 <h3>Writing Resources</h3>
 <p><i>A list of resources for students and writing consultants</i></p>
-<a href="">Purdue Owl</a>
+<a href="" target="_blank">Purdue Owl</a>
 <ul><li>Details about APA and MLA formatting, tips to avoid plagiarism, and writing business letters, and resumes.</li></ul>
-<a href="">Checklist for Writers</a>
+<a href="" target="_blank">Checklist for Writers</a>
 <ul><li>Details about APA and MLA formatting, tips to avoid plagiarism, and writing business letters, and resumes.</li></ul>
-<a href="">Community for Accredited Online Schools</a>
+<a href="" target="_blank">Community for Accredited Online Schools</a>
 <ul><li>hosts resources on how to write Argumentative Essays, Descriptive Essay, and Expository Essay, Narrative Essay, and Personal Statements and Applications.</li></ul>
-<a href="">University of Wisconsin Writing Center</a>
+<a href="" target="_blank">University of Wisconsin Writing Center</a>
 <ul><li>Walks you though every step of the writing process from start to finish</li></ul>
