--- a/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
@@ -43,7 +43,7 @@
 
 <!-- Manipulating Consultants -->
 <br>
-<h3>Consultant</h3>
+<h3>Manage Consultants</h3>
 <div *ngIf="edit">
   <h5>Edit Consultant </h5>
   <form (ngSubmit)="onSubmitEdit(f)" #f="ngForm" id="editForm">
