--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -20,8 +20,7 @@
       </ul>
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login
-            in</button></a>
+          <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login</button></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)" (click)="logout()">
@@ -73,7 +72,7 @@
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Login in</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0">Login</button>
           </a>
         </li>
         <li class="nav-item">
@@ -129,8 +128,7 @@
     </ul>
     <ul class="navbar-nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login
-            in</button></a>
+        <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login</button></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" (click)="logout()"><button
