--- a/DRHSWS_UI/src/app/review/pending/pending.component.html
+++ b/DRHSWS_UI/src/app/review/pending/pending.component.html
@@ -57,6 +57,7 @@
 <div *ngIf="write">
   <h5>Write Review:</h5>
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <!-- <h6 *ngIf="write=true">{{newReview.firstName}} {{newReview.lastName}}</h6> -->
     <div class="form-group">
       <textarea class="form-control" cols="9" rows="3" name="review" placeholder="Write Review" ngModel></textarea>
     </div>
