--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -108,8 +108,11 @@
         </div>
         <div class="form-group">
           <label for="teacher">Teacher</label>
-          <input ngModel name="teacher" type="text" class="form-control" id="teacher" placeholder="Enter Teacher"
-            required>
+          <input ngModel name="teacher" type="text" class="form-control" id="teacher" placeholder="Enter Teacher" required>
+        </div>
+        <div class="form-group">
+          <label for="emailT">Teacher</label>
+          <input ngModel name="emailT" type="text" class="form-control" id="emailT" placeholder="Enter Teacher Email" required>
         </div>
         <div class="form-group">
           <label for="fileLink">File Link</label>
