--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div id="student" *ngIf="student">
-  <nav class="navbar col-md-12 navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav mr-auto">
