--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,95 +1,101 @@
 <div id="student" *ngIf="student">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link " role="button" routerLink="/appointment/new" id="navbarDropdown">
-            Appointments
-          </a>
-          <!-- <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/appointment/new">New Appointment</a>
-          </div> -->
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/resource">Resources</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login</button></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)" (click)="logout()">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Logout</button>
-          </a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link " role="button" routerLink="/appointment/new" id="navbarDropdown">
+              Appointments
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/resource">Resources</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0)" (click)="logout()">
+              <button class="btn btn-outline-primary my-2 my-sm-0">Logout</button>
+            </a>
+          </li>
+        </ul>
     </div>
   </nav>
 </div>
 <div id="consultant" *ngIf="consultant">
-  <nav class="navbar col-md-12 navbar-expand-lg navbar-dark bg-dark">
-      <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
-      <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
-           Appointments
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/appointment/new">New Appointment</a>
-            <a class="dropdown-item" routerLink="/appointment/upcoming">Upcoming Appointments</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
-            Reviews
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/review/pending">Pending Reviews</a>
-            <a class="dropdown-item" routerLink="/review/past">Past Reviews</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
-            Settings
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/admin/settings">Settings</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/resource">Resources</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Login</button>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)" (click)="logout()">
-            <button class="btn btn-outline-primary my-2 my-sm-0">Logout</button>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
+            Appointments
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" routerLink="/appointment/new">New Appointment</a>
+              <a class="dropdown-item" routerLink="/appointment/upcoming">Upcoming Appointments</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
+              Reviews
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" routerLink="/review/pending">Pending Reviews</a>
+              <a class="dropdown-item" routerLink="/review/past">Past Reviews</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" id="navbarDropdown">
+              Settings
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" routerLink="/admin/settings">Settings</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/resource">Resources</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">
+              <button disabled class="btn btn-outline-primary my-2 my-sm-0">Login</button>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0)" (click)="logout()">
+              <button class="btn btn-outline-primary my-2 my-sm-0">Logout</button>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 </div>
 
 <div id="admin" *ngIf="admin">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
-  <div class="collapse navbar-collapse">
-    <ul class="nav navbar-nav mr-auto">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div><a class="navbar-brand" routerLink="/"><img src="..\assets\WClogo2.jpg" class="img-fluid rounded mx-auto d-block" alt="WC Logo" width="55" height="50"></a></div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
@@ -128,7 +134,7 @@
     </ul>
     <ul class="navbar-nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/login"><button class="btn btn-outline-primary my-2 my-sm-0">Login</button></a>
+        <a class="nav-link" routerLink="/login"><button disabled class="btn btn-outline-primary my-2 my-sm-0">Login</button></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" (click)="logout()"><button
@@ -136,5 +142,5 @@
       </li>
     </ul>
   </div>
-</nav> 
+  </nav> 
 </div>
